--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-{\rtf1}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Watches website</title>
+
+        <!--========== FAVICON ==========-->
+        <link rel="shortcut icon" href="./assets/img/favicon.png">
+
+        <!--========== BOXICONS ==========-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
+        <!--========== SWIPER CSS ==========-->
+        <link rel="stylesheet" href="">
+
+        <!--========== CSS ==========-->
+        <link rel="stylesheet" href="assets/css/index.css">
+    </head>
+
+    <body>
+        <!--========== HEADER ==========-->
+        <header class="header" id="header"></header>
+
+        <!--========== CART ==========-->
+        <div class="cart" id="cart"></div>
+
+        <!--========== MAIN ==========-->
+        <main class="main"><h1></h1></main>
+
+        <!--========== FOOTER ==========-->
+        <footer class="footer section"></footer>
+
+        <!--========== SCROLL UP ==========-->
+
+        <!--========== SWIPER JS ==========-->
+        <script src=""></script>
+
+        <!--========== MAIN JS ==========-->
+        <script src="./assets/js/index.js"></script>
+    </body>
+</html>
