--- a/index.html
+++ b/index.html
@@ -13,20 +13,164 @@
 
         <!--========== SWIPER CSS ==========-->
         <link rel="stylesheet" href="">
-
+        
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/index.css">
     </head>
 
     <body>
         <!--========== HEADER ==========-->
-        <header class="header" id="header"></header>
+        <header class="header" id="header">
+            <nav class="nav container">
+                <a href="#" class="nav__logo">
+                    <i class='bx bxs-watch nav__logo-icon'></i> Rolex
+                </a>
+
+                <div class="nav__menu" id="nav-menu">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#home" class="nav__link">Home</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#featured" class="nav__link">Featured</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#products" class="nav__link">Products</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#new" class="nav__link">New</a>
+                        </li>
+                    </ul>
+
+                    <div class="nav__close" id="nav-close">
+                        <i class='bx bx-x'></i>
+                    </div> <!-- nav__close close -->
+                </div> <!-- nav__menu close -->
+
+                <div class="nav__btns">
+                    <div class="nav__shop" id="cart-shop">
+                        <i class='bx bx-shopping-bag' ></i>
+                    </div> <!-- nav__shop close -->
+
+                    <div class="nav__toggle" id="nav-toggle">
+                        <i class='bx bx-grid-alt' ></i>
+                    </div> <!-- nav__toggle close -->
+                </div> <!-- nav__btns close -->
+            </nav>
+        </header>
 
         <!--========== CART ==========-->
         <div class="cart" id="cart"></div>
 
         <!--========== MAIN ==========-->
-        <main class="main"><h1></h1></main>
+        <main class="main">
+            <!--========== HOME ==========-->
+            <section class="home" id="home">
+                <div class="home__container container grid">
+                    <div class="home__img-bg">
+                        <img src="./assets/img/home.png" alt="" class="home__img">
+                    </div>
+
+                    <div class="home__social">
+                        <a href="https://www.facebook.com/" target="_blank" class="home__social-link">
+                            Facebook
+                        </a>
+                        <a href="https://www.twitter.com/" target="_blank" class="home__social-link">
+                            Twitter
+                        </a>
+                        <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
+                            Instagram
+                        </a>
+                    </div>
+
+                    <div class="home__data">
+                        <h1 class="home__title">
+                            NEW WATCH <br> COLLECTIONS B720
+                        </h1>
+                        <p class="home__description">
+                            Latest arrival of the new imported watches of the B720 series,
+                            with a modern and resistant design
+                        </p>
+                        <span class="home__price">$1245</span>
+
+                        <div class="home__btns">
+                            <a href="#" class="button button--gray button--small">
+                                Discover
+                            </a>
+
+                            <button class="button home__button">ADD TO CART</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!--========== FEATURED ==========-->
+            <section class="featured section container" id="featured">
+                <h2 class="section__title">
+                    Featured
+                </h2>
+
+                <div class="featured__container grid">
+                    <article class="featured__card">
+                        <span class="featured__tag">Sale</span>
+
+                        <img src="./assets/img/featured1.png" alt="" class="featured__img">
+
+                        <div class="featured__data">
+                            <h3 class="featured__title">Jazzmaster</h3>
+                            <span class="featured__price">$1050</span>
+
+                            <button class="button featured__button">
+                                ADD TO CART
+                            </button>
+                        </div>
+                    </article>
+
+                    <article class="featured__card">
+                        <span class="featured__tag">Sale</span>
+
+                        <img src="./assets/img/featured2.png" alt="" class="featured__img">
+
+                        <div class="featured__data">
+                            <h3 class="featured__title">Ingersoll</h3>
+                            <span class="featured__price">$250</span>
+
+                            <button class="button featured__button">
+                                ADD TO CART
+                            </button>
+                        </div>
+                    </article>
+
+                    <article class="featured__card">
+                        <span class="featured__tag">Sale</span>
+
+                        <img src="./assets/img/featured3.png" alt="" class="featured__img">
+
+                        <div class="featured__data">
+                            <h3 class="featured__title">Rose gold</h3>
+                            <span class="featured__price">$890</span>
+
+                            <button class="button featured__button">
+                                ADD TO CART
+                            </button>
+                        </div>
+                    </article>
+                </div>
+            </section>
+
+            <!--========== STORY ==========-->
+            <section class="story section container">
+
+            </section>
+
+            <!--========== PRODUCTS ==========-->
+            <section class="products section container" id="products">
+
+            </section>
+        </main>
 
         <!--========== FOOTER ==========-->
         <footer class="footer section"></footer>
