--- a/index.html
+++ b/index.html
@@ -163,11 +163,110 @@
 
             <!--========== STORY ==========-->
             <section class="story section container">
+                <div class="story__container grid">
+                    <div class="story__data">
+                        <h2 class="section__title story__section-title">
+                            Our Story
+                        </h2>
 
+                        <h1 class="story__title">
+                            Inspirational Watch of <br> this year
+                        </h1>
+
+                        <p class="story__description">
+                            The latest and modern watches of this year
+                            are available in various presentations in this store.
+                            Discover them now.
+                        </p>
+
+                        <a href="#" class="button button--small">
+                            Discover
+                        </a>
+                    </div>
+
+                    <div class="story__images">
+                        <img src="./assets/img/story.png" alt="" class="story__img">
+                        <div class="story__square"></div>
+                    </div>
+                </div>
             </section>
 
             <!--========== PRODUCTS ==========-->
             <section class="products section container" id="products">
+                <h2 class="section__title">
+                    Products
+                </h2>
+
+                <div class="products__container grid">
+                    <article class="products__card">
+                        <img src="./assets/img/product1.png" alt="A Rose-Gold Hamilton Automatic Watch" class="products__img">
+
+                        <h3 class="products__title">Spirit Rose</h3>
+                        <span class="products__price">$1500</span>
+
+                        <button class="products__button">
+                            <i class='bx bx-shopping-bag' ></i>
+                        </button>
+                    </article>
+
+                    <article class="products__card">
+                        <img src="./assets/img/product2.png" alt="A Silver Hamilton Automatic Watch" class="products__img">
+
+                        <h3 class="products__title">Khaki Pilot</h3>
+                        <span class="products__price">$1350</span>
+
+                        <button class="products__button">
+                            <i class='bx bx-shopping-bag' ></i>
+                        </button>
+                    </article>
+
+                    <article class="products__card">
+                        <img src="./assets/img/product3.png" alt="A Bronze Hamilton Automatic Watch" class="products__img">
+
+                        <h3 class="products__title">Jubilee Black</h3>
+                        <span class="products__price">$870</span>
+
+                        <button class="products__button">
+                            <i class='bx bx-shopping-bag' ></i>
+                        </button>
+                    </article>
+
+                    <article class="products__card">
+                        <img src="./assets/img/product4.png" alt="A Silver Fossil Automatic Watch with a leather band" class="products__img">
+
+                        <h3 class="products__title">Fossil me3</h3>
+                        <span class="products__price">$650</span>
+
+                        <button class="products__button">
+                            <i class='bx bx-shopping-bag' ></i>
+                        </button>
+                    </article>
+
+                    <article class="products__card">
+                        <img src="./assets/img/product5.png" alt="A Silver L' Duchen Watch with a leather, textured band" class="products__img">
+
+                        <h3 class="products__title">Duchen</h3>
+                        <span class="products__price">$950</span>
+
+                        <button class="products__button">
+                            <i class='bx bx-shopping-bag' ></i>
+                        </button>
+                    </article>
+                </div>
+            </section>
+
+            <!--========== TESTIMONIALS ==========-->
+            <section class="testimonial section container">
+
+            </section>
+
+            <!--========== NEW ==========-->
+            <section class="new section container" id="new">
+
+            </section>
+
+            <!--========== NEWSLETTER ==========-->
+            <section class="newsletter section container">
 
             </section>
         </main>
