--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
         <!--========== SWIPER CSS ==========-->
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
         
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/index.css">
@@ -51,6 +51,9 @@
                 </div> <!-- nav__menu close -->
 
                 <div class="nav__btns">
+                    <!-- Theme change button -->
+                    <i class="bx bx-moon change-theme" id="theme-button"></i>
+
                     <div class="nav__shop" id="cart-shop">
                         <i class='bx bx-shopping-bag' ></i>
                     </div> <!-- nav__shop close -->
@@ -63,7 +66,99 @@
         </header>
 
         <!--========== CART ==========-->
-        <div class="cart" id="cart"></div>
+        <div class="cart" id="cart">
+            <i class="bx bx-x cart__close" id="cart-close"></i>
+
+            <h2 class="cart__title-center">My Cart</h2>
+
+            <div class="cart__container">
+                <article class="cart__card">
+                    <div class="cart__box">
+                        <img src="./assets/img/featured1.png" alt="" class="cart__img">
+                    </div>
+
+                    <div class="cart__details">
+                        <h3 class="cart__title">Jazzmaster</h3>
+                        <span class="cart__price">$1050</span>
+
+                        <div class="cart__amount">
+                            <div class="cart__amount-content">
+                                <span class="cart__amount-box">
+                                    <i class="bx bx-minus"></i>
+                                </span>
+
+                                <span class="cart__amount-number">1</span>
+
+                                <span class="cart__amount-box">
+                                    <i class="bx bx-plus"></i>
+                                </span>
+                            </div>
+
+                            <i class="bx bx-trash-alt cart__amount-trash"></i>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="cart__card">
+                    <div class="cart__box">
+                        <img src="./assets/img/featured3.png" alt="" class="cart__img">
+                    </div>
+
+                    <div class="cart__details">
+                        <h3 class="cart__title">Rose Gold</h3>
+                        <span class="cart__price">$850</span>
+
+                        <div class="cart__amount">
+                            <div class="cart__amount-content">
+                                <span class="cart__amount-box">
+                                    <i class="bx bx-minus"></i>
+                                </span>
+
+                                <span class="cart__amount-number">1</span>
+
+                                <span class="cart__amount-box">
+                                    <i class="bx bx-plus"></i>
+                                </span>
+                            </div>
+
+                            <i class="bx bx-trash-alt cart__amount-trash"></i>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="cart__card">
+                    <div class="cart__box">
+                        <img src="./assets/img/new1.png" alt="" class="cart__img">
+                    </div>
+
+                    <div class="cart__details">
+                        <h3 class="cart__title">Longines Rose</h3>
+                        <span class="cart__price">$980</span>
+
+                        <div class="cart__amount">
+                            <div class="cart__amount-content">
+                                <span class="cart__amount-box">
+                                    <i class="bx bx-minus"></i>
+                                </span>
+
+                                <span class="cart__amount-number">1</span>
+
+                                <span class="cart__amount-box">
+                                    <i class="bx bx-plus"></i>
+                                </span>
+                            </div>
+
+                            <i class="bx bx-trash-alt cart__amount-trash"></i>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div class="cart__prices">
+                <span class="cart__prices-item">3 items</span>
+                <span class="cart__prices-total">$2880</span>
+            </div>
+        </div>
 
         <!--========== MAIN ==========-->
         <main class="main">
@@ -166,17 +261,18 @@
                 <div class="story__container grid">
                     <div class="story__data">
                         <h2 class="section__title story__section-title">
-                            Our Story
+                            Discover
                         </h2>
 
                         <h1 class="story__title">
-                            Inspirational Watch of <br> this year
+                            OUR WATCHES ARE CRAFTED <br> WITH SCRUPULOUS ATTENTION TO DETAIL.
                         </h1>
 
                         <p class="story__description">
-                            The latest and modern watches of this year
-                            are available in various presentations in this store.
-                            Discover them now.
+                            Explore a collection of prestigious, 
+                            high-precision timepieces. We offer a wide assortment
+                            of Oyster Perpetual and Cellini watches to suit any wrist. 
+                            Find a perfect combination of style and functionality for you.
                         </p>
 
                         <a href="#" class="button button--small">
@@ -257,27 +353,268 @@
 
             <!--========== TESTIMONIALS ==========-->
             <section class="testimonial section container">
+                <div class="testimonial__container grid">
+                    <div class="swiper testimonial-swiper">
+                        <div class="swiper-wrapper">
+                            <div class="testimonial__card swiper-slide">
+                                <div class="testimonial__quote">
+                                    <i class='bx bxs-quote-alt-left' ></i>
+                                </div>
 
+                                <p class="testimonial__description">
+                                    They are the best watches that one can acquire,
+                                    also they are always with the latest news and trends,
+                                    with a very comfortable price and especially with all the attention you recieve,
+                                    they are always attentive to your questions.
+                                </p>
+                                <h3 class="testimonial__date">March 27, 2021</h3>
+
+                                <div class="testimonial__perfil">
+                                    <img src="./assets/img/testimonial1.jpg" alt="" class="testimonial__perfil-img">
+
+                                    <div class="testimonial__perfil-data">
+                                        <span class="testimonial__perfil-name">Lee Doe</span>
+                                        <span class="testimonial__perfil-detail">Director of a company</span>
+                                    </div>
+                                </div>
+                            </div> <!-- testimonial__card close -->
+
+                            <div class="testimonial__card swiper-slide">
+                                <div class="testimonial__quote">
+                                    <i class='bx bxs-quote-alt-left' ></i>
+                                </div>
+
+                                <p class="testimonial__description">
+                                    They are the best watches that one can acquire,
+                                    also they are always with the latest news and trends,
+                                    with a very comfortable price and especially with all the attention you recieve,
+                                    they are always attentive to your questions.
+                                </p>
+                                <h3 class="testimonial__date">March 27, 2021</h3>
+
+                                <div class="testimonial__perfil">
+                                    <img src="./assets/img/testimonial2.jpg" alt="" class="testimonial__perfil-img">
+
+                                    <div class="testimonial__perfil-data">
+                                        <span class="testimonial__perfil-name">Samantha Mey</span>
+                                        <span class="testimonial__perfil-detail">Director of a company</span>
+                                    </div>
+                                </div>
+                            </div> <!-- testimonial__card close -->
+
+                            <div class="testimonial__card swiper-slide">
+                                <div class="testimonial__quote">
+                                    <i class='bx bxs-quote-alt-left' ></i>
+                                </div>
+
+                                <p class="testimonial__description">
+                                    They are the best watches that one can acquire,
+                                    also they are always with the latest news and trends,
+                                    with a very comfortable price and especially with all the attention you recieve,
+                                    they are always attentive to your questions.
+                                </p>
+                                <h3 class="testimonial__date">March 27, 2021</h3>
+
+                                <div class="testimonial__perfil">
+                                    <img src="./assets/img/testimonial3.jpg" alt="" class="testimonial__perfil-img">
+
+                                    <div class="testimonial__perfil-data">
+                                        <span class="testimonial__perfil-name">Raul Zaman</span>
+                                        <span class="testimonial__perfil-detail">Director of a company</span>
+                                    </div>
+                                </div> <!-- testimonial__perfil close -->
+                            </div> <!-- testimonial__card close -->
+                        </div> <!-- swiper-wrapper close -->
+
+                        <div class="swiper-button-next">
+                            <i class="bx bx-right-arrow-alt"></i>
+                        </div>
+                        <div class="swiper-button-prev">
+                            <i class="bx bx-left-arrow-alt"></i>
+                        </div>
+                        
+                    </div> <!-- swiper & testimonial-wrapper close -->
+
+                    <div class="testimonial__images">
+                        <div class="testimonial__square">
+                            <img src="./assets/img/testimonial.png" alt="" class="testimonial__img">
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--========== NEW ==========-->
             <section class="new section container" id="new">
+                <h2 class="section__title">
+                    New Arrivals
+                </h2>
 
+                <div class="new__container">
+                    <div class="swiper new-swiper">
+                        <div class="swiper-wrapper">
+                            <article class="new__card swiper-slide">
+                                <span class="new__tag">New</span>
+
+                                <img src="./assets/img/new1.png" alt="Watch" class="new__img">
+
+                                <div class="new__data">
+                                    <h3 class="new__title">Longines rose</h3>
+                                    <span class="new__price">$980</span>
+                                </div>
+
+                                <button class="button new__button">ADD TO CART</button>
+                            </article>
+
+                            <article class="new__card swiper-slide">
+                                <span class="new__tag">New</span>
+
+                                <img src="./assets/img/new2.png" alt="Watch" class="new__img">
+
+                                <div class="new__data">
+                                    <h3 class="new__title">Jazzmaster</h3>
+                                    <span class="new__price">$1150</span>
+                                </div>
+
+                                <button class="button new__button">ADD TO CART</button>
+                            </article>
+
+                            <article class="new__card swiper-slide">
+                                <span class="new__tag">New</span>
+
+                                <img src="./assets/img/new3.png" alt="Watch" class="new__img">
+
+                                <div class="new__data">
+                                    <h3 class="new__title">Dreyfuss gold</h3>
+                                    <span class="new__price">$750</span>
+                                </div>
+
+                                <button class="button new__button">ADD TO CART</button>
+                            </article>
+
+                            <article class="new__card swiper-slide">
+                                <span class="new__tag">New</span>
+
+                                <img src="./assets/img/new4.png" alt="Watch" class="new__img">
+
+                                <div class="new__data">
+                                    <h3 class="new__title">Portuguese rose</h3>
+                                    <span class="new__price">$1590</span>
+                                </div>
+
+                                <button class="button new__button">ADD TO CART</button>
+                            </article>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--========== NEWSLETTER ==========-->
             <section class="newsletter section container">
+                <div class="newsletter__bg grid">
+                    <div>
+                        <h2 class="newsletter__title">
+                            Subscribe Our <br> Newsletter
+                        </h2>
+                        <p class="newsletter__description">
+                            Don't miss out on your discounts. 
+                            Subscribe to our email newsletter 
+                            to get the best offers, discounts, 
+                            coupons, gifts and much more.
+                        </p>
+                    </div>
 
+                    <form action="" class="newsletter__subscribe">
+                        <input type="email" placeholder="Enter your email" class="newsletter__input">
+                        <button class="button">
+                            SUBSCRIBE
+                        </button>
+                    </form>
+                </div>
             </section>
         </main>
 
         <!--========== FOOTER ==========-->
-        <footer class="footer section"></footer>
+        <footer class="footer section">
+            <div class="footer__container container grid">
+                <div class="footer__content">
+                    <h3 class="footer__title">
+                        Address
+                    </h3>
+
+                    <ul class="footer__list">
+                        <li>1234 - Peru</li>
+                        <li>La Libertad 43210</li>
+                        <li>123-456-789</li>
+                    </ul>
+                </div>
+
+                <div class="footer__content">
+                    <h3 class="footer__title">About Us</h3>
+
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__link">Support Center</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Customer Support</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Copyrights</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer__content">
+                    <h3 class="footer__title">Products</h3>
+
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__link">Fashion Watches</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Sports Watches</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Electric</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Accesories</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer__content">
+                    <h3 class="footer__title">Social</h3>
+
+                    <ul class="footer__social">
+                        <a href="https://www.facebook.com" target="_blank" class="footer__social-link">
+                            <i class="bx bxl-facebook"></i>
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank" class="footer__social-link">
+                            <i class="bx bxl-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com" target="_blank" class="footer__social-link">
+                            <i class="bx bxl-instagram"></i>
+                        </a>
+                    </ul>
+                </div>
+            </div>
+
+            <span class="footer__copy">
+                &#169; All rights reserved
+            </span>
+        </footer>
 
         <!--========== SCROLL UP ==========-->
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class="bx bx-up-arrow-alt scrollup__icon"></i>
+        </a>
 
         <!--========== SWIPER JS ==========-->
-        <script src=""></script>
+        <script src="./assets/js/swiper-bundle.min.js"></script>
 
         <!--========== MAIN JS ==========-->
         <script src="./assets/js/index.js"></script>
